--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "倒數計時",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "可自訂時間的倒數計時器，附有視覺提醒功能",
-  "permissions": ["storage", "alarms"],
+  "permissions": ["storage", "alarms", "contextMenus", "activeTab", "notifications"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
