--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "倒數計時",
-  "version": "1.0.0",
-  "description": "可自訂時間的倒數計時器，附有視覺提醒功能",
+  "name": "__MSG_extensionName__",
+  "version": "1.1.0",
+  "description": "__MSG_extensionDescription__",
+  "default_locale": "en",
   "permissions": ["storage", "alarms", "contextMenus", "activeTab", "notifications"],
   "action": {
     "default_popup": "popup.html",
@@ -26,5 +27,9 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [{
+    "resources": ["_locales/*/messages.json"],
+    "matches": ["<all_urls>"]
+  }]
 }
